Version 1.1.2 (released ??-???-????)

  * add optional support for character encoding detection (issue #400)

Version 1.1.1 (released 03-Jun-2009)

  * fix broken query form (missing required template variables) (issue #416)
  * fix bug in cvsdb which caused rebuild operations to lose data (issue #417)
  * fix cvsdb purge/rebuild repos lookup to error on missing repos
  * fix misleading file contents view page title

Version 1.1.0 (released 13-May-2009)

  * add support for full content diffs (issue #153)
  * make many more data dictionary items available to all views
  * various rcsparse and tparse module fixes
  * add daemon mode to standalone.py (issue #235)
  * rework helper application configuration options (issues #229, #62)
  * teach standalone.py to recognize Subversion repositories via -r option
  * now interpret relative paths in "viewvc.conf" as relative to that file
  * add 'purge' subcommand to cvsdbadmin and svndbadmin (issue #271)
  * fix orphaned data bug in cvsdbadmin/svndbadmin rebuild (issue #271)
  * add support for query by log message (issues #22, #121)
  * fix bug parsing 'svn blame' output with too-long author names (issue #221)
  * fix default standalone.py port to be within private IANA range (issue #234)
  * add unified configury of allowed views; checkout view disabled by default
  * add support for ranges of revisions to svndbadmin (issue #224)
  * make the query handling more forgiving of malformatted subdirs (issue #244)
  * add support for per-root configuration overrides (issue #371)
  * add support for optional email address mangling (issue #290)
  * extensible path-based authorization subsystem (issue #268), supporting:
    - Subversion authz files (new)
    - regexp-based path hiding (for compat with 1.0.x)
    - file glob top-level directory hiding (for compat with 1.0.x)
  * allow default file view to be "markup" (issue #305)
  * add support for displaying file/directory properties (issue #39)
  * pagination improvements